# Fireshit

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE_TRANSITION.md  MANIFEST.json  MANIFEST.sha256  NOTICE  PRIVACY.md  PUBLISHING.md  README.html  README.md  RELEASE_NOTES_1.1.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  run.sh
Firemod/: LICENSE  meson.build
Firemod/data/: firemod.gresource.xml  org.philabs.Firemod.desktop  org.philabs.Firemod.metainfo.xml
Firemod/data/capabilities.d/: README.md
Firemod/data/modules.d/: org.example.firemod-module.module.example
Firemod/data/ui/: firemod.css
Firemod/data/wayfire/: firemod.xml
Firemod/src/: firemod-action-editor.c  firemod-action-editor.h  firemod-actions.c  firemod-actions.h  firemod-app-index.c  firemod-app-index.h  firemod-app.c  firemod-app.h  firemod-authority-widget.c  firemod-authority-widget.h  firemod-build-config.h.in  firemod-capability.c  firemod-capability.h  firemod-capture-private.h  firemod-capture-select.c  firemod-capture.c  firemod-capture.h  firemod-color-picker-private.h  firemod-color-picker.c  firemod-color-picker.h  firemod-color.c  firemod-color.h  firemod-discovery.c  firemod-discovery.h  firemod-dispatch.c  firemod-dispatch.h  firemod-fireshit-page.c  firemod-fireshit-page.h  firemod-first-party.c  firemod-first-party.h  firemod-hex-assets.c  firemod-hex-assets.h  firemod-hex-layout.c  firemod-hex-layout.h  firemod-hex-preview.c  firemod-hex-preview.h  firemod-menu.c  firemod-menu.h  firemod-model.c  firemod-model.h  (+30 more)
Firemod/src/wayfire/: firemod-wayfire-plugin.cpp
Firemod/tests/: test-color.c
FrameTap/: LICENSE  meson.build  meson_options.txt
FrameTap/config/: frametap.ini.example  wayfire.ini.fragment
FrameTap/plugin/: meson.build
FrameTap/plugin/include/frametap/plugin/: capture_backend.hpp  linear_buffer_pool.hpp  server.hpp
FrameTap/plugin/metadata/: frametap.xml
FrameTap/plugin/src/: capture_backend.cpp  capture_source.cpp  linear_buffer_pool.cpp  plugin.cpp  server.cpp  server_catalog.cpp
FrameTap/protocol/: meson.build
FrameTap/protocol/include/frametap/protocol/: codec.hpp  packet.hpp  seqpacket.hpp
FrameTap/protocol/src/: codec.cpp  codec_catalog.cpp  codec_internal.hpp  seqpacket.cpp
FrameTap/tests/: cli_test.cpp  config_test.cpp  meson.build  protocol_test.cpp  seqpacket_test.cpp
FrameTap/worker/: meson.build
FrameTap/worker/include/frametap/worker/: application_audio.hpp  buffer_pool.hpp  cli.hpp  config.hpp  launch.hpp  loop_output.hpp  plugin_client.hpp  region_selector.hpp  session.hpp  vaapi_encoder.hpp
FrameTap/worker/src/: application_audio.cpp  audio_finalize.cpp  buffer_pool.cpp  cli.cpp  command_process.cpp  command_process.hpp  config.cpp  config_files.cpp  help.cpp  launch.cpp  loop_output.cpp  main.cpp  plugin_client.cpp  region_selector.cpp  region_selector_draw.cpp  region_selector_events.cpp  region_selector_impl.hpp  session.cpp  target_request.cpp  target_request.hpp  vaapi_encoder.cpp  vaapi_encoder_impl.hpp  vaapi_import.cpp  vaapi_mux.cpp
LEGAL/: FIRESHIT_AI_PROVENANCE.md  FIRESHIT_COMMERCIAL_LICENSING.md  FIRESHIT_CONTRIBUTOR_ASSIGNMENT.md  FIRESHIT_LEGAL_FRAMEWORK.md  FIRESHIT_MARKS_POLICY.md  FIRESHIT_THIRD_PARTY_POLICY.md  README.md  RELEASE_AUDIT_1.1.md  RELEASE_LEGAL_GATE.md  SPDX_AND_PACKAGE_METADATA.md
Substr8HUD/: meson.build
Substr8HUD/config/: config.ini  substr8-hud-console.tmux.conf  tty.conf
Substr8HUD/config/btop/: btop.conf  environment  substr8-compact.theme  tmux.conf
Substr8HUD/config/modules.d/: 00-tty.ini  00-wayfire-log.ini  01-htop.ini  02-btop.ini  05-nvtop.ini  10-shell.ini  20-opensnitchd.ini  21-nethogs.ini  30-iotop.ini  README.md
Substr8HUD/metadata/: wayfire-hud.xml
Substr8HUD/scripts/: substr8-btop  substr8-btop-runner  substr8-btop-service  substr8-btopctl  substr8-hud-console
Substr8HUD/src/: hud-app.c  hud-app.h  hud-arrangement.c  hud-arrangement.h  hud-config-write.c  hud-config.c  hud-config.h  hud-control.c  hud-control.h  hud-dnd.c  hud-dnd.h  hud-layout.c  hud-layout.h  hud-module-path.c  hud-module-path.h  hud-module.c  hud-module.h  hud-navigation.c  hud-navigation.h  hud-opacity.c  hud-opacity.h  hud-output.c  hud-output.h  hud-settings.c  hud-settings.h  hud-slot.c  hud-slot.h  hud-state.c  hud-state.h  hud-surface.c  hud-surface.h  hud-terminal.c  hud-terminal.h  hudctl.c  main.c  substr8-vt-mirror.c  wayfire-hud-plugin.cpp
Substr8HUD/systemd/: substr8-btop.service.in  substr8-hud-console@.service.in
releases/: Fireshit-1.1-linux-x86_64-binaries.zip.sha256  README.md  SHA256SUMS  firemod  firemodctl  frametap  substr8-vt-mirror  wayfire-hud  wayfire-hudctl
